; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_alloc.c_tmalloc_small.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_lj_alloc.c_tmalloc_small.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32 }

@MIN_CHUNK_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.TYPE_8__*, i64)* @tmalloc_small to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @tmalloc_small(%struct.TYPE_8__* %0, i64 %1) #0 {
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %3, align 8
  store i64 %1, i64* %4, align 8
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %12 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @lj_ffs(i32 %13)
  store i32 %14, i32* %9, align 4
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %16 = load i32, i32* %9, align 4
  %17 = call i32* @treebin_at(%struct.TYPE_8__* %15, i32 %16)
  %18 = load i32, i32* %17, align 4
  store i32 %18, i32* %5, align 4
  store i32 %18, i32* %6, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @chunksize(i32 %19)
  %21 = load i64, i64* %4, align 8
  %22 = sub i64 %20, %21
  store i64 %22, i64* %8, align 8
  br label %23

23:                                               ; preds = %38, %2
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @leftmost_child(i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %39

27:                                               ; preds = %23
  %28 = load i32, i32* %5, align 4
  %29 = call i64 @chunksize(i32 %28)
  %30 = load i64, i64* %4, align 8
  %31 = sub i64 %29, %30
  store i64 %31, i64* %10, align 8
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* %8, align 8
  %34 = icmp ult i64 %32, %33
  br i1 %34, label %35, label %38

35:                                               ; preds = %27
  %36 = load i64, i64* %10, align 8
  store i64 %36, i64* %8, align 8
  %37 = load i32, i32* %5, align 4
  store i32 %37, i32* %6, align 4
  br label %38

38:                                               ; preds = %35, %27
  br label %23

39:                                               ; preds = %23
  %40 = load i32, i32* %6, align 4
  %41 = load i64, i64* %4, align 8
  %42 = call i32 @chunk_plus_offset(i32 %40, i64 %41)
  store i32 %42, i32* %7, align 4
  %43 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %44 = load i32, i32* %6, align 4
  %45 = call i32 @unlink_large_chunk(%struct.TYPE_8__* %43, i32 %44)
  %46 = load i64, i64* %8, align 8
  %47 = load i64, i64* @MIN_CHUNK_SIZE, align 8
  %48 = icmp ult i64 %46, %47
  br i1 %48, label %49, label %56

49:                                               ; preds = %39
  %50 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %51 = load i32, i32* %6, align 4
  %52 = load i64, i64* %8, align 8
  %53 = load i64, i64* %4, align 8
  %54 = add i64 %52, %53
  %55 = call i32 @set_inuse_and_pinuse(%struct.TYPE_8__* %50, i32 %51, i64 %54)
  br label %68

56:                                               ; preds = %39
  %57 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %58 = load i32, i32* %6, align 4
  %59 = load i64, i64* %4, align 8
  %60 = call i32 @set_size_and_pinuse_of_inuse_chunk(%struct.TYPE_8__* %57, i32 %58, i64 %59)
  %61 = load i32, i32* %7, align 4
  %62 = load i64, i64* %8, align 8
  %63 = call i32 @set_size_and_pinuse_of_free_chunk(i32 %61, i64 %62)
  %64 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %65 = load i32, i32* %7, align 4
  %66 = load i64, i64* %8, align 8
  %67 = call i32 @replace_dv(%struct.TYPE_8__* %64, i32 %65, i64 %66)
  br label %68

68:                                               ; preds = %56, %49
  %69 = load i32, i32* %6, align 4
  %70 = call i8* @chunk2mem(i32 %69)
  ret i8* %70
}

declare dso_local i32 @lj_ffs(i32) #1

declare dso_local i32* @treebin_at(%struct.TYPE_8__*, i32) #1

declare dso_local i64 @chunksize(i32) #1

declare dso_local i32 @leftmost_child(i32) #1

declare dso_local i32 @chunk_plus_offset(i32, i64) #1

declare dso_local i32 @unlink_large_chunk(%struct.TYPE_8__*, i32) #1

declare dso_local i32 @set_inuse_and_pinuse(%struct.TYPE_8__*, i32, i64) #1

declare dso_local i32 @set_size_and_pinuse_of_inuse_chunk(%struct.TYPE_8__*, i32, i64) #1

declare dso_local i32 @set_size_and_pinuse_of_free_chunk(i32, i64) #1

declare dso_local i32 @replace_dv(%struct.TYPE_8__*, i32, i64) #1

declare dso_local i8* @chunk2mem(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
